Bug 1240286 - Deleting text with backspace causes the action bar to glitch, r=smaug, TYLin, jchen